context/source-materials/legacy/changeswork-full/planning/mvp/versions/v6.1/tasks/mvp_tasks_approvals_page.md
# Задачи для страницы "Согласования" (Approvals View)

## Обзор страницы

**Страница:** Согласования (Approvals View)
**Путь в макете:** Боковое меню → "Согласования"
**Статус:** Новая разработка

### Что показывает страница (из макета):

**2 вкладки:**
1. **На согласовании (Approval)** - назначения текущего пользователя на Approval-этапах (`ApprovalInstance` + текущий `ApprovalStage`)
2. **На утверждении (Ratification)** - назначения текущего пользователя как Ratifier на ratification-этапе (индивидуально или по Package)

**Функционал:**
- Группировка по Package (если элементы в пакете) + отдельные элементы
- Checkbox для выбора элементов (batch операции)
- Кнопки batch действий:
  - "Согласовать выбранные (N)" / "Утвердить выбранные (N)"
  - "Отклонить выбранные (N)"
- Кнопки для отдельных элементов:
  - "Согласовать" / "Утвердить"
  - "Отклонить"
- Кнопки для пакетов:
  - "Согласовать пакет" / "Утвердить пакет"
  - "Отклонить пакет"
- Диалог детального просмотра элемента
- Диалог комментария для действий (approve/reject/ratify)
- Отображение EntityScorecardBlock для каждого элемента
- Отображение информации об инициативе и о внедрении (если применимо)
- Клик на элемент → детальный просмотр

**Права доступа:**
- Согласующий видит только элементы, где он назначен согласующим
- ПРМ/Методолог, назначенные согласующими, видят свои назначения
- Админ видит все элементы

**Особенности:**
- Только назначенные согласующие могут принимать решения
- Комментарий обязателен при отклонении
- Batch операции для множественного согласования/отклонения
- Группировка по Package для координированного согласования

---

## AN-APR1: Аналитика страницы "Согласования"

**Тип:** Story
**Приоритет:** Критический
**Оценка:** 5 дней

### Summary
Детализация требований для разработки страницы Согласования с batch операциями и группировкой по пакетам

### Description

Провести аналитику для разработки страницы Согласования:

1. **Детализация бизнес-требований:**
   - Определить правила отображения элементов (только назначенные)
   - Уточнить логику batch согласования/отклонения
   - Определить правила группировки по Package
   - Уточнить логику согласования пакета целиком
   - Определить правила комментирования (обязательность)
   - Уточнить права доступа для разных ролей

2. **Спецификация UI/UX:**
   - Разработка 2 вкладок (На согласовании, На утверждении)
   - Спецификация группировки по Package
   - Дизайн checkbox для batch выбора
   - Спецификация кнопок batch действий
   - Спецификация диалога детального просмотра
   - Спецификация диалога комментария
   - Дизайн карточек элементов

3. **Спецификация API контракта:**
   - GET /api/approval-instances/my/?stage_type=approval|ratification - список назначений текущего пользователя
   - POST /api/approval-instances/{id}/approve/ - согласование текущего этапа
   - POST /api/approval-instances/{id}/reject/ - отклонение (комментарий обязателен)
   - POST /api/approval-instances/{id}/ratify/ - утверждение (для ratification-этапа)
   - (опционально) POST /api/approvals/batch/approve|reject|ratify - batch операции по списку `approval_instance_id`
   - Коды ошибок (403, 404, 500)

4. **Определение полей для отображения:**
   - Группировка: Package (если есть) + отдельные элементы
   - Элементы: Pilot/Deployment (ID, название, статус, скоркарты, инициатива)
   - Этап: согласование/утверждение
   - Действия: согласовать/отклонить, комментарий

### Acceptance Criteria

- [ ] Бизнес-требования задокументированы
- [ ] API контракт задокументирован
- [ ] Определены все поля для отображения
- [ ] Правила группировки по Package описаны
- [ ] Правила batch операций описаны
- [ ] Правила комментирования описаны
- [ ] Права доступа для ролей определены
- [ ] Документ согласован с заказчиком

### Dependencies
Нет

### Deliverables
- Документ "Спецификация страницы Согласования" (markdown/confluence)
- API контракт для GET /api/approvals/my/, POST /api/approvals/approve/, POST /api/approvals/reject/, POST /api/approvals/ratify/

---

## BE-APR1: Backend для страницы "Согласования"

**Тип:** Story
**Приоритет:** Критический
**Оценка:** 6 дней

### Summary
Разработка Backend для страницы Согласования с batch операциями и фильтрацией по назначениям

### Description

Разработать Backend для страницы Согласования:

1. **API Endpoint: GET /api/approvals/my/**

   **Параметры запроса:**
   - `stage` (optional) - фильтр по этапу (approval/ratification)
   - `page` (optional, default=1) - номер страницы
   - `page_size` (optional, default=20) - размер страницы

   **Формат ответа:**
   ```json
   {
     "count": 42,
     "results": {
       "packages": [
         {
           "package": {
             "id": "uuid",
             "display_id": "PKG-001",
             "name": "Пакет изменений Premium Q1 2026",
             "deployment": {
               "id": "uuid",
               "display_id": "DEP-001",
               "name": "Оптимизация риск-стратегии Premium карт"
             }
           },
           "items": [
             {
               "id": "uuid",
               "type": "pilot",
               "display_id": "PLT-001",
               "name": "Пилот Premium Q1 2026",
               "pilot_status": "requires_activation",
               "approval_instance_status": "in_progress",
               "stage_type": "approval",
               "scorecards": [...],
               "created_at": "2026-03-01T10:00:00Z"
             }
           ]
         }
       ],
       "standalone": [
         {
           "id": "uuid",
           "type": "deployment",
           "display_id": "DEP-001",
           "name": "Внедрение новой скоркарты Premium",
           "approval_instance_status": "in_progress",
           "stage_type": "ratification",
           "scorecards": [...],
           "initiative": {...},
           "created_at": "2026-03-01T10:00:00Z"
         }
       ]
     }
   }
   ```

2. **API Endpoint: POST /api/approvals/approve/**

   **Параметры запроса:**
   ```json
   {
     "items": [
       {"type": "pilot", "id": "uuid"},
       {"type": "deployment", "id": "uuid"}
     ],
     "comment": "Согласовано без замечаний"
   }
   ```

   **Бизнес-логика:**
   - Валидация: текущий пользователь назначен согласующим для всех элементов
   - Обновление ApprovalDecision для текущего пользователя → 'approved'
   - Проверка: все ли согласующие этапа приняли решение
   - Если все согласовали → переход к следующему этапу или завершение
   - Отправка уведомлений


3. **API Endpoint: POST /api/approvals/reject/**

   **Параметры запроса:**
   ```json
   {
     "items": [
       {"type": "pilot", "id": "uuid"},
       {"type": "deployment", "id": "uuid"}
     ],
     "comment": "Требуется доработка обоснования"
   }
   ```

   **Бизнес-логика:**
   - Валидация: текущий пользователь назначен согласующим для всех элементов
   - Валидация: комментарий обязателен
   - Обновление ApprovalDecision для текущего пользователя → 'rejected'
   - Обновление ApprovalWorkflow → 'rejected'
   - Возврат элементов в предыдущий статус
   - Отправка уведомлений автору с причиной

4. **API Endpoint: POST /api/approvals/ratify/**

   **Параметры запроса:**
   ```json
   {
     "items": [
       {"type": "pilot", "id": "uuid"},
       {"type": "deployment", "id": "uuid"}
     ],
     "comment": "Утверждено"
   }
   ```

   **Бизнес-логика:**
   - Валидация: текущий пользователь назначен утверждающим (ratifier) для всех элементов
   - Обновление ApprovalDecision для текущего пользователя → 'approved'
   - Завершение процесса согласования
   - Обновление статусов target-сущностей выполняется в `BE-INT1` (интеграция ЖЦ); `BE-APR1` отвечает за решения в ApprovalInstance
   - Отправка уведомлений

5. **Бизнес-логика:**

   **БП-1: Фильтрация по назначениям**
   - Показывать только элементы, где текущий пользователь назначен согласующим
   - Для этапа approval: проверка ApprovalDecision.approver_id = current_user
   - Для этапа ratification: проверка ratifier_id = current_user

   **БП-2: Группировка по Package**
   - Элементы в Package группируются вместе
   - Отдельные элементы (без Package) показываются отдельно
   - Возможность согласовать/отклонить весь Package целиком

   **БП-3: Batch операции**
   - Можно согласовать/отклонить несколько элементов одновременно
   - Валидация: пользователь назначен согласующим для всех выбранных элементов
   - Комментарий применяется ко всем элементам

6. **Права доступа:**
   - Просмотреть может: только назначенный согласующий/утверждающий
   - Согласовать/отклонить может: только назначенный согласующий/утверждающий
   - HTTP 403 если пользователь не назначен


### Acceptance Criteria

- [ ] GET /api/approvals/my/ endpoint реализован
- [ ] Фильтрация по назначениям работает
- [ ] Группировка по Package работает
- [ ] POST /api/approvals/approve/ endpoint реализован
- [ ] Batch согласование работает
- [ ] POST /api/approvals/reject/ endpoint реализован
- [ ] Валидация обязательности комментария работает
- [ ] POST /api/approvals/ratify/ endpoint реализован
- [ ] Batch утверждение работает
- [ ] Права доступа реализованы (только назначенные)
- [ ] HTTP 403 возвращается при попытке доступа неназначенного пользователя
- [ ] Уведомления отправляются корректно
- [ ] Unit тесты покрывают все сценарии (coverage > 80%)
- [ ] Integration тесты для всех операций
- [ ] API документация обновлена

### Dependencies
- BE-AP1 (требуется процесс согласования)
- BE-INT1 (требуется интеграция ЖЦ)

---


## FE-APR1: Frontend для страницы "Согласования"

**Тип:** Story
**Приоритет:** Критический
**Оценка:** 7 дней

### Summary
Разработка UI страницы Согласования с 2 вкладками, группировкой по пакетам и batch операциями

### Description

Разработать Frontend для страницы Согласования:

1. **Компонент ApprovalsView:**
   - 2 вкладки: На согласовании (approval), На утверждении (ratification)
   - Группировка по Package + отдельные элементы
   - Responsive дизайн

2. **Вкладка "На согласовании":**
   - Отображение назначений текущего пользователя на Approval-этапах (`ApprovalInstance` + `ApprovalStage(stage_type=approval)`)
   - Группировка по Package (если есть)
   - Отдельные элементы (без Package)
   - Checkbox для каждого элемента (batch выбор)
   - Кнопки batch действий:
     - "Согласовать выбранные (N)"
     - "Отклонить выбранные (N)"
   - Кнопки для отдельных элементов:
     - "Согласовать"
     - "Отклонить"
   - Кнопки для пакетов:
     - "Согласовать пакет"
     - "Отклонить пакет"

3. **Вкладка "На утверждении":**
   - Отображение назначений текущего пользователя на Ratification-этапе (`ApprovalStage(stage_type=ratification)`)
   - Группировка по Package (если есть)
   - Checkbox для каждого элемента
   - Кнопки batch действий:
     - "Утвердить выбранные (N)"
     - "Отклонить выбранные (N)"
   - Кнопки для отдельных элементов:
     - "Утвердить"
     - "Отклонить"

4. **Диалог детального просмотра элемента:**
   - Открывается при клике на элемент
   - Отображение полной информации: ID, название, статус, внедрение, скоркарты
   - Кнопки действий: "Согласовать"/"Утвердить", "Отклонить"
   - Закрытие диалога

5. **Диалог комментария:**
   - Открывается при любом действии (approve/reject/ratify)
   - Поле ввода комментария (обязательное для reject)
   - Отображение количества выбранных элементов
   - Кнопки: "Отмена", "Подтвердить"

6. **Карточки элементов:**
   - Checkbox для выбора
   - Тип элемента: Pilot/Deployment (иконка + ID)
   - Название (кликабельное)
   - Статус (бейдж)
   - EntityScorecardBlock (до 2 скоркарт)
   - Информация об инициативе/внедрении (контекст)
   - Кнопки действий

7. **Группировка по Package:**
   - Заголовок группы: "Пакет: {название}"
   - Список элементов под заголовком
   - Кнопки для пакета целиком
   - Визуальное разделение групп

8. **EntityScorecardBlock:**
   - Отображение связанных скоркарт (до 2 шт)
   - Клик на скоркарту → переход к детальному просмотру скоркарты
   - Если больше 2 → "+N еще"

9. **Loading и Error состояния:**
   - Skeleton loader при загрузке
   - Error message при ошибке API
   - Empty state если нет данных

10. **API интеграция:**
    - ApprovalService.getMy(stage, page, pageSize)
    - ApprovalService.approve(items, comment)
    - ApprovalService.reject(items, comment)
    - ApprovalService.ratify(items, comment)
    - Обработка ошибок (403, 404, 500)
    - Toast уведомления при ошибках


### Acceptance Criteria

- [ ] ApprovalsView компонент реализован
- [ ] 2 вкладки работают корректно
- [ ] Группировка по Package работает
- [ ] Отдельные элементы отображаются корректно
- [ ] Checkbox для batch выбора работает
- [ ] Кнопки batch действий работают
- [ ] Кнопки для отдельных элементов работают
- [ ] Кнопки для пакетов работают
- [ ] Диалог детального просмотра реализован
- [ ] Диалог комментария реализован
- [ ] Валидация обязательности комментария работает (для reject)
- [ ] Карточки элементов отображаются корректно
- [ ] EntityScorecardBlock отображается корректно
- [ ] Информация о внедрении отображается
- [ ] Клик на элемент открывает детальный просмотр
- [ ] Клик на скоркарту открывает детальный просмотр скоркарты
- [ ] Согласование/отклонение работает
- [ ] Утверждение/отклонение работает
- [ ] Loading состояние (skeleton) работает
- [ ] Error состояние отображается
- [ ] Empty state отображается если нет данных
- [ ] Responsive дизайн работает
- [ ] API интеграция работает корректно
- [ ] Обработка ошибок реализована
- [ ] Unit тесты для компонента (coverage > 70%)

### Dependencies
- AN-APR1 (требуется UI спецификация)
- BE-APR1 (требуется готовый API endpoint)

---


## Итоговая зависимость задач

```
AN-APR1 (2 дня)
  ↓
BE-APR1 (6 дней)
  ↓
FE-APR1 (7 дней)
```

**Общая длительность (критический путь):** 15 дней

**Параллельная работа:**
- BE-APR1 может начаться сразу после AN-APR1
- FE-APR1 может начаться только после готовности BE-APR1

---

## ✅ Ключевые особенности страницы

1. **Новая разработка** - сложная страница с множеством функционала
2. **2 вкладки** - На согласовании (approval), На утверждении (ratification)
3. **Группировка по Package** - координированное согласование пакетов
4. **Batch операции** - множественное согласование/отклонение
5. **Диалог детального просмотра** - полная информация об элементе
6. **Диалог комментария** - обязательный для отклонения
7. **EntityScorecardBlock** - отображение связанных скоркарт
8. **Фильтрация по назначениям** - только элементы, где пользователь назначен
9. **Права доступа** - только назначенные согласующие/утверждающие
10. **Кнопки для пакетов** - согласование/отклонение пакета целиком
11. **Responsive дизайн** - адаптация под разные разрешения

---
