context/source-materials/legacy/changeswork-full/planning/mvp/versions/v6.5/tasks/mvp_tasks_approvals_page.md
# Задачи для страницы "Согласования" (Approvals View)

## Обзор страницы

**Страница:** Согласования (Approvals View)
**Путь в макете:** Боковое меню → "Согласования"
**Статус:** Новая разработка

### Что показывает страница (из макета):

**2 вкладки:**
1. **На согласовании (Approval)** - назначения текущего пользователя на Approval-этапах (`ApprovalInstance` + текущий `ApprovalStage`)
2. **На утверждении (Ratification)** - назначения текущего пользователя как Ratifier на ratification-этапе (индивидуально или по Package)

**Функционал:**
- На вкладке Approval: список назначений на PilotVersion/DeploymentVersion (без Package)
- На вкладке Ratification: список назначений:
  - индивидуальные PilotVersion/DeploymentVersion (auto_ratification=true или запуск из очереди awaiting_ratification)
  - Package (ratification-only), с раскрытием состава (items)
- Checkbox для выбора элементов (batch операции):
  - На вкладке Approval: можно выбирать несколько PilotVersion/DeploymentVersion
  - На вкладке Ratification: checkbox применим только к items внутри одного Package (для индивидуальных элементов batch нет)
- Кнопки batch действий:
  - "Согласовать выбранные (N)" / "Утвердить выбранные (N)"
  - "Отклонить выбранные (N)"
- Кнопки для отдельных элементов:
  - "Согласовать" / "Утвердить"
  - "Отклонить"
- Кнопки для пакетов:
  - "Утвердить пакет" (batch-действие по items пакета)
  - "Отклонить пакет" (batch-действие по items пакета)
  - Примечание MVP: "утвердить пакет" это batch-действие для всех позиций пакета, но итоговые статусы фиксируются по каждой позиции; также допускаются решения по позициям отдельно.
- Диалог детального просмотра элемента
- Диалог комментария для действий (approve/reject/ratify)
- Отображение EntityScorecardBlock для каждого элемента
- Отображение информации об инициативе и о внедрении (если применимо)
- Клик на элемент → детальный просмотр

**Права доступа:**
- Согласующий видит только элементы, где он назначен согласующим
- ПРМ/Методолог, назначенные согласующими, видят свои назначения
- Админ видит все элементы

**Особенности:**
- Только назначенные согласующие могут принимать решения
- Комментарий опционален для всех действий (approve/reject/ratify)
- Batch операции для множественного согласования/отклонения
- Группировка по Package для координированного согласования
- Для ratification в составе Package комментарии должны сохраняться по каждому item отдельно и быть доступны:
  - в истории Package (состав + комментарии по items),
  - в истории каждого item (PilotVersion/DeploymentVersion), даже если решение принято batch-действием по Package.

---

## AN-APR1: Аналитика страницы "Согласования"

**Тип:** Story
**Приоритет:** Критический
**Оценка:** 5 дней

### Summary
Детализация требований для разработки страницы Согласования с batch операциями и группировкой по пакетам

### Description

Провести аналитику для разработки страницы Согласования:

1. **Детализация бизнес-требований:**
   - Определить правила отображения элементов (только назначенные)
   - Уточнить логику batch согласования/отклонения
   - Определить правила группировки по Package
   - Уточнить логику согласования пакета целиком
   - Определить правила комментирования (обязательность)
   - Уточнить права доступа для разных ролей

2. **Спецификация UI/UX:**
   - Разработка 2 вкладок (На согласовании, На утверждении)
   - Спецификация группировки по Package
   - Дизайн checkbox для batch выбора
   - Спецификация кнопок batch действий
   - Спецификация диалога детального просмотра
   - Спецификация диалога комментария
   - Дизайн карточек элементов

3. **Спецификация API контракта:**
   - GET /api/approval-instances/my/?stage_type=approval|ratification - список назначений текущего пользователя
   - POST /api/approval-instances/{id}/approve/ - согласование текущего этапа (Approval)
   - POST /api/approval-instances/{id}/reject/ - отклонение (комментарий опционален)
   - POST /api/approval-instances/{id}/ratify/ - утверждение (Ratification) для индивидуального target (PilotVersion/DeploymentVersion)
   - POST /api/approval-instances/{id}/ratify_package/ - ratification по Package:
     - batch "approve/reject all" по items (кроме recalled) с общим комментарием
     - поэлементные решения с отдельными комментариями (через массив решений)
   - (опционально) POST /api/approval-instances/batch/approve|reject - batch операции по списку `approval_instance_id` (только для Approval; для ratification групповые действия делаем через Package)
   - Коды ошибок (403, 404, 500)

4. **Определение полей для отображения:**
   - Группировка: Package (только на вкладке Ratification) + отдельные элементы
   - Элементы: PilotVersion/DeploymentVersion (ID, название, статус, скоркарты, продукт/контекст)
   - Этап: согласование/утверждение
   - Действия: согласовать/отклонить, комментарий

### Acceptance Criteria

- [ ] Бизнес-требования задокументированы
- [ ] API контракт задокументирован
- [ ] Определены все поля для отображения
- [ ] Правила группировки по Package описаны
- [ ] Правила batch операций описаны
- [ ] Правила комментирования описаны
- [ ] Права доступа для ролей определены
- [ ] Документ согласован с заказчиком

### Dependencies
Нет

### Deliverables
- Документ "Спецификация страницы Согласования" (markdown/confluence)
- API контракт для GET /api/approval-instances/my/ + action endpoints по ApprovalInstance (approve/reject/ratify/ratify_package)

---

## BE-APR1: Backend для страницы "Согласования"

**Тип:** Story
**Приоритет:** Критический
**Оценка:** 6 дней

### Summary
Разработка Backend для страницы Согласования с batch операциями и фильтрацией по назначениям

### Description

Разработать Backend для страницы Согласования:

1. **API Endpoint: GET /api/approval-instances/my/**

   **Параметры запроса:**
   - `stage` (optional) - фильтр по этапу (approval/ratification)
   - `page` (optional, default=1) - номер страницы
   - `page_size` (optional, default=20) - размер страницы

   **Формат ответа:**
   ```json
   {
     "count": 42,
     "results": {
       "packages": [
         {
           "package": {
             "id": "uuid",
             "display_id": "PKG-001",
             "name": "Пакет изменений Premium Q1 2026",
             "deployment": {
               "id": "uuid",
               "display_id": "DEP-001",
               "name": "Оптимизация риск-стратегии Premium карт"
             }
           },
           "items": [
             {
               "id": "uuid",
               "type": "pilot",
               "display_id": "PLT-001",
               "name": "Пилот Premium Q1 2026",
               "pilot_status": "requires_activation",
               "approval_instance_status": "in_progress",
               "stage_type": "approval",
               "scorecards": [...],
               "last_comment": "одобрено в составе пакета с комментарием: ...",
               "created_at": "2026-03-01T10:00:00Z"
             }
           ]
         }
       ],
       "standalone": [
         {
           "id": "uuid",
           "type": "deployment",
           "display_id": "DEP-001",
           "name": "Внедрение новой скоркарты Premium",
	           "approval_instance_status": "in_progress",
	           "stage_type": "ratification",
	           "scorecards": [...],
	           "last_comment": "Комментарий (если есть)",
	           "product": {...},
	           "created_at": "2026-03-01T10:00:00Z"
	         }
	       ]
     }
   }
   ```

2. **Action: approve/reject/ratify**

В MVP для действий используем action endpoints `ApprovalInstance` (см. `BE-AP1`):
- `POST /api/approval-instances/{id}/approve/`
- `POST /api/approval-instances/{id}/reject/`
- `POST /api/approval-instances/{id}/ratify/` (для индивидуального PilotVersion/DeploymentVersion)
- `POST /api/approval-instances/{id}/ratify_package/` (для Package: batch или по items)

Если нужна оптимизация под batch UI, допускается отдельный aggregator endpoint (опционально), но он должен проксировать в ту же логику `BE-AP1` и сохранять решения по Package items.

3. **Бизнес-логика:**

   **БП-1: Фильтрация по назначениям**
   - Показывать только ApprovalInstance, где текущий пользователь назначен на текущий этап
   - На Ratification вкладке:
     - индивидуальные PilotVersion/DeploymentVersion: текущий пользователь = ratifier
     - Package: текущий пользователь назначен ratifier на ApprovalInstance(target_type='package')

   **БП-2: Представление Package**
   - Package попадает на вкладку Ratification как одна запись, но UI может раскрывать items.
   - Действия "Утвердить пакет/Отклонить пакет" должны приводить к сохранению решений **по каждому item** (см. `PackageItemDecision` в `BE-AP1`).

   **БП-3: Комментарии по item**
   - Для ratification в составе Package комментарии храним по каждому item отдельно.
   - При batch "утвердить пакет" комментарий на каждый item сохраняем с префиксом `одобрено в составе пакета с комментарием: ...`

4. **Права доступа:**
   - Просмотр: только назначенный согласующий/ratifier (и админ при наличии режима админа)
   - Решение: только назначенный пользователь текущего этапа
   - HTTP 403 если пользователь не назначен


### Acceptance Criteria

- [ ] GET /api/approval-instances/my/ endpoint реализован
- [ ] Фильтрация по назначениям работает
- [ ] Представление Package на вкладке ratification работает (состав + статусы items)
- [ ] Действия делаются через endpoints ApprovalInstance (approve/reject/ratify/ratify_package)
- [ ] Для ratification по Package решения/комментарии сохраняются по каждому item (PackageItemDecision)
- [ ] Права доступа реализованы (только назначенные)
- [ ] HTTP 403 возвращается при попытке доступа неназначенного пользователя
- [ ] Уведомления отправляются корректно
- [ ] Unit тесты покрывают все сценарии (coverage > 80%)
- [ ] Integration тесты для всех операций
- [ ] API документация обновлена

### Dependencies
- BE-AP1 (требуется процесс согласования)
- BE-INT1 (требуется интеграция ЖЦ)

---


## FE-APR1: Frontend для страницы "Согласования"

**Тип:** Story
**Приоритет:** Критический
**Оценка:** 7 дней

### Summary
Разработка UI страницы Согласования с 2 вкладками, группировкой по пакетам и batch операциями

### Description

Разработать Frontend для страницы Согласования:

1. **Компонент ApprovalsView:**
   - 2 вкладки: На согласовании (approval), На утверждении (ratification)
   - Группировка по Package + отдельные элементы
   - Responsive дизайн

2. **Вкладка "На согласовании":**
   - Отображение назначений текущего пользователя на Approval-этапах (`ApprovalInstance` + `ApprovalStage(stage_type=approval)`)
   - Только PilotVersion/DeploymentVersion (Package отсутствует на Approval в MVP)
   - Checkbox для каждого элемента (batch выбор)
   - Кнопки batch действий:
     - "Согласовать выбранные (N)"
     - "Отклонить выбранные (N)"
   - Кнопки для отдельных элементов:
     - "Согласовать"
     - "Отклонить"
   - Кнопки для пакетов:
     - (нет в MVP; Package только на Ratification)

3. **Вкладка "На утверждении":**
   - Отображение назначений текущего пользователя на Ratification-этапе (`ApprovalStage(stage_type=ratification)`)
   - Отдельные элементы (индивидуальные PilotVersion/DeploymentVersion)
   - Пакеты (Package) с раскрытием состава items
   - Checkbox только для items внутри раскрытого Package (для batch-решений по выбранным items)
   - Кнопки batch действий:
     - "Утвердить выбранные (N)"
     - "Отклонить выбранные (N)"
   - Кнопки для отдельных элементов:
     - "Утвердить"
     - "Отклонить"
   - Кнопки для пакетов:
     - "Утвердить пакет" (batch по items)
     - "Отклонить пакет" (batch по items)
     - Поэлементные решения внутри пакета (approve/reject по item с отдельными комментариями)
   - Важно (MVP): batch-действия "Утвердить выбранные/Отклонить выбранные" применяются только к items внутри одного Package. Для индивидуальных PilotVersion/DeploymentVersion ratification выполняется только по одному элементу (без batch).

4. **Диалог детального просмотра элемента:**
   - Открывается при клике на элемент
   - Отображение полной информации: ID, название, статус, внедрение, скоркарты
   - Кнопки действий: "Согласовать"/"Утвердить", "Отклонить"
   - Закрытие диалога

5. **Диалог комментария:**
   - Открывается при любом действии (approve/reject/ratify)
   - Поле ввода комментария (опционально)
   - Отображение количества выбранных элементов
   - Кнопки: "Отмена", "Подтвердить"

6. **Карточки элементов:**
   - Checkbox для выбора (только там, где допустим batch)
   - Тип элемента: PilotVersion/DeploymentVersion (иконка + ID)
   - Название (кликабельное)
   - Статус (бейдж)
   - EntityScorecardBlock (до 2 скоркарт)
   - Информация о контексте (продукт, внедрение при наличии)
   - Кнопки действий

7. **Группировка по Package:**
   - Заголовок группы: "Пакет: {название}"
   - Список элементов под заголовком
   - Кнопки для пакета целиком
   - Визуальное разделение групп
   - Выбор элементов в пакете:
     - "Утвердить пакет/Отклонить пакет" применяются к выбранным (checkbox) items пакета
     - items без галочек после выполнения действия "выпадают" из пакета и остаются как индивидуальные элементы в списке на утверждение (их нужно утверждать/отклонять по одному)

8. **EntityScorecardBlock:**
   - Отображение связанных скоркарт (до 2 шт)
   - Клик на скоркарту → переход к детальному просмотру скоркарты
   - Если больше 2 → "+N еще"

9. **Loading и Error состояния:**
   - Skeleton loader при загрузке
   - Error message при ошибке API
   - Empty state если нет данных

10. **API интеграция:**
    - ApprovalService.getMy(stage, page, pageSize)
    - ApprovalService.approve(items, comment)
    - ApprovalService.reject(items, comment)
    - ApprovalService.ratify(items, comment)
    - Обработка ошибок (403, 404, 500)
    - Toast уведомления при ошибках

11. **Просмотр комментариев (обязательно):**
   - В списке отображать последний комментарий (если есть)
   - В деталке элемента показывать историю комментариев/решений:
     - для индивидуального PilotVersion/DeploymentVersion: история ApprovalDecision
     - для items в составе Package: история PackageItemDecision (с ссылкой на Package)


### Acceptance Criteria

- [ ] ApprovalsView компонент реализован
- [ ] 2 вкладки работают корректно
- [ ] Группировка по Package работает
- [ ] Отдельные элементы отображаются корректно
- [ ] Checkbox для batch выбора работает
- [ ] Кнопки batch действий работают
- [ ] Кнопки для отдельных элементов работают
- [ ] Кнопки для пакетов работают
- [ ] Диалог детального просмотра реализован
- [ ] Диалог комментария реализован
- [ ] Комментарий опционален: действия работают и с пустым комментарием
- [ ] Карточки элементов отображаются корректно
- [ ] EntityScorecardBlock отображается корректно
- [ ] Информация о внедрении отображается
- [ ] Клик на элемент открывает детальный просмотр
- [ ] Клик на скоркарту открывает детальный просмотр скоркарты
- [ ] Согласование/отклонение работает
- [ ] Утверждение/отклонение работает
- [ ] Loading состояние (skeleton) работает
- [ ] Error состояние отображается
- [ ] Empty state отображается если нет данных
- [ ] Responsive дизайн работает
- [ ] API интеграция работает корректно
- [ ] Обработка ошибок реализована
- [ ] Unit тесты для компонента (coverage > 70%)

### Dependencies
- AN-APR1 (требуется UI спецификация)
- BE-APR1 (требуется готовый API endpoint)

---


## Итоговая зависимость задач

```
AN-APR1 (2 дня)
  ↓
BE-APR1 (6 дней)
  ↓
FE-APR1 (7 дней)
```

**Общая длительность (критический путь):** 15 дней

**Параллельная работа:**
- BE-APR1 может начаться сразу после AN-APR1
- FE-APR1 может начаться только после готовности BE-APR1

---

## ✅ Ключевые особенности страницы

1. **Новая разработка** - сложная страница с множеством функционала
2. **2 вкладки** - На согласовании (approval), На утверждении (ratification)
3. **Группировка по Package** - координированное согласование пакетов
4. **Batch операции** - множественное согласование/отклонение
5. **Диалог детального просмотра** - полная информация об элементе
6. **Диалог комментария** - обязательный для отклонения
7. **EntityScorecardBlock** - отображение связанных скоркарт
8. **Фильтрация по назначениям** - только элементы, где пользователь назначен
9. **Права доступа** - только назначенные согласующие/утверждающие
10. **Кнопки для пакетов** - согласование/отклонение пакета целиком
11. **Responsive дизайн** - адаптация под разные разрешения

---
